--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.31.0",
@@ -17,6 +18,8 @@
     "eslint-plugin-promise": "^7.1.0",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.6",
-    "lint-staged": "^15.2.10"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.10",
+    "ts-jest": "^29.2.5"
   }
 }
