--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/faker": "^4.1.11",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
@@ -26,5 +27,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "ts-jest": "^29.2.5"
+  },
+  "dependencies": {
+    "axios": "^1.7.9"
   }
 }
