--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/axios": "^0.9.36",
     "@types/faker": "^4.1.11",
     "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.31.0",
@@ -29,6 +31,8 @@
     "ts-jest": "^29.2.5"
   },
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
