--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
     "eslint": "^9.14.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
@@ -29,9 +30,14 @@
     "faker": "^4.1.0",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "sass": "^1.82.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^7.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
