--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/axios": "^0.9.36",
     "@types/faker": "^4.1.11",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -44,7 +44,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "typescript": "^5.8.3"
   }
 }
