--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^1.7.9",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "typescript": "^5.8.3"
   }
 }
