--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@testing-library/react": "^10.0.4",
     "@types/axios": "^0.9.36",
     "@types/faker": "^4.1.11",
     "@types/jest": "^29.5.14",
