--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^9.1.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.2",
     "lint-staged": "^15.2.10",
     "sass": "^1.82.0",
     "sass-loader": "^8.0.2",
